--- a/ImageModificationTest/ImageModificationTest.csproj
+++ b/ImageModificationTest/ImageModificationTest.csproj
@@ -77,6 +77,12 @@
   <ItemGroup>
     <None Include="Resources\testBeforeFilter.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\testParesseux.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\emptyTest.png" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
