--- a/ImageModificationTest/ImageModificationTest.csproj
+++ b/ImageModificationTest/ImageModificationTest.csproj
@@ -46,7 +46,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -56,7 +58,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource1.resx</DependentUpon>
     </Compile>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTestSobel3x3Filter.cs" />
+    <Compile Include="UnitTestSwapFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -73,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\filterTest.png" />
+    <None Include="Settings.aiis" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\testBeforeFilter.jpg" />
@@ -82,6 +86,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\emptyTest.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\InTheArmySobel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\InTheArmyOriginal.jpg" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
@@ -103,6 +113,11 @@
   </Choose>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties Name="ImageModificationTest" />
+    </VisualStudio>
+  </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
